--- a/overlays/dev/_argocd-parent-app/application.yaml
+++ b/overlays/dev/_argocd-parent-app/application.yaml
@@ -11,9 +11,11 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/argoproj/argocd-example-apps.git
+    repoURL: https://github.com/Jojoooo1/argocd-gitops.git
     targetRevision: master
     path: overlays/dev/_argocd-apps
+    kustomize:
+      namePrefix: dev-
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
