--- a/overlays/dev/_argocd-apps/applications.yaml
+++ b/overlays/dev/_argocd-apps/applications.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     repoURL: https://github.com/Jojoooo1/argocd-gitops.git
     targetRevision: master
-    path: overlays/applications
+    path: overlays/dev/applications
   destination:
     server: https://kubernetes.default.svc
     namespace: test
