--- a/overlays/dev/_argocd-apps/rbac.yaml
+++ b/overlays/dev/_argocd-apps/rbac.yaml
@@ -16,4 +16,4 @@ spec:
     path: base/rbac
   destination:
     server: https://kubernetes.default.svc
-    # namespace: default
+    namespace: default
