--- a/base/applications/spring-app/backend/kustomization.yaml
+++ b/base/applications/spring-app/backend/kustomization.yaml
@@ -1,11 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: default
+
 resources:
   - configmap.yaml
   - service.yaml
   - deployment.yaml
   - rbac.yaml
-
-  - database/service.yaml
-  - database/deployment.yaml
