--- a/base/applications/spring-app/database/deployment.yaml
+++ b/base/applications/spring-app/database/deployment.yaml
@@ -40,3 +40,12 @@ spec:
               value: "password"
           ports:
             - containerPort: 3306
+
+          volumeMounts:
+            - name: mysql-pv
+              mountPath: /var/lib/mysql
+              
+      volumes:
+      - name: mysql-pv
+        persistentVolumeClaim:
+          claimName: mysql-pvc
