--- a/base/applications/spring-app/database/kustomization.yaml
+++ b/base/applications/spring-app/database/kustomization.yaml
@@ -1,8 +1,9 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namespace: default #
 
 resources:
-  - nginx.yaml
+  - pv.yaml
+  - service.yaml
+  - deployment.yaml
