--- a/overlays/dev/applications/kustomization.yaml
+++ b/overlays/dev/applications/kustomization.yaml
@@ -7,6 +7,9 @@ bases:
   - ../../../base/applications/spring-app/backend
   - ../../../base/applications/spring-app/database
 
+resources:
+  - ingress
+
 patchesStrategicMerge:
   - spring-app/backend/configmap-patch.yaml
   
