--- a/overlays/dev/_argocd-apps/sealed-secrets.yaml
+++ b/overlays/dev/_argocd-apps/sealed-secrets.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     repoURL: https://github.com/Jojoooo1/argocd-gitops.git
     targetRevision: master
-    path: base/sealed-secrets
+    path: overlays/dev/sealed-secrets
   destination:
     server: https://kubernetes.default.svc
     namespace: default
